# Tarefa6_EmbarcaTech2

./: CMakeLists.txt  Tarefa6.c
